fix: restore visible links by using inline-flex instead of flex

--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -203,7 +203,7 @@
   }
 
   .visible-links {
-    display: flex;
+    display: inline-flex;
     align-items: center;
 
     li {
